-
Bug
-
Resolution: Fixed
-
P1: Critical
-
Qt Creator 10.0.0-beta1
-
None
-
-
c3e44bb3b (master)
Turn on the Options: Devices: Android: "Automatically create kits for Android tool chains" flag.
Expected result:
There is auto-detected kit for Android in the Options.
Current result:
Error about non-existing Android compiler.
Tested build:
Last working build without error:
For Gerrit Dashboard: QTCREATORBUG-28680 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
455636,4 | QtSupport: Pass empty device root for local Qt | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |