QtSupport: Pass empty device root for local Qt

Fixes: QTCREATORBUG-28680
Change-Id: Id90b6b9427d4b85ebc4e9f097dfdd996062d4c85
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>